# maplab

algorithms/map-optimization/include/map-optimization/: vi-map-relaxation.h
algorithms/map-optimization/src/: vi-map-relaxation.cc
applications/rovioli/include/rovioli/: ros-helpers.h
console-plugins/custom-map-optimization-plugin/: CMakeLists.txt  package.xml
console-plugins/custom-map-optimization-plugin/include/custom-map-optimization-plugin/: custom_map_optimization_plugin.h  utils.h
console-plugins/custom-map-optimization-plugin/src/: custom_map_optimization_plugin.cc
