<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>custom-map-optimization-plugin</name>
  <version>0.0.0</version>
  <description>A plugin that adds external loop closures to optvi</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>console_common</depend>
  <depend>map_manager</depend>
  <depend>vi_map</depend>
  <depend>map_optimization</depend>
</package>
